# ciri

./: Cargo.toml  README.md  docs.md  flake.nix  types.nix
.github/ISSUE_TEMPLATE/: kdl-config-generation-malformed.md
.github/workflows/: ci.yml  cleanup.yml  docs.yml  rust.yml  typegen.yml  types.yml
docs/: ndg.toml  option-docs.json  quickstart.md
docs/content/: index.md  quickstart.md
examples/: example-config.nix  full-example.nix
lib/: default.nix
lib/kdl/: default.nix  input.nix  overrides.nix  utils.nix
modules/: hm-module.nix
modules/test/: flake.nix  test-config.nix
nix/: hm-module.nix  package.nix
nix/home-manager/: default.nix  options.nix
nix/test/: flake.nix
nix/tests/: example-config.nix
src/: crawler.rs  main.rs  nix.rs
src/nix/: docs.rs  example.rs  examples.rs  overrides.rs  types.rs
