[package]
name = "package"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"]}
alejandra = "3.1.0"
log = "0.4.29"
env_logger = "0.11.10"
indexmap = "2.0"
proc-macro2 = "1.0"
clap = { version = "4.6.1", features = ["derive"] }
